# rateyourDJ

./: .gitignore  agent-redesign.md  agent-tools-contract.md  api-contract.md  change.md  data-contract.md  explain.md  pyproject.toml  readme.md  总结.md  说明.md
.github/workflows/: ci.yml
data/: grpo.jsonl  sft.jsonl
eval/: queries_v1.jsonl  score_sheet_v1.md
src/rateyourdj/: __init__.py  agent_tools.py  config.py
src/rateyourdj/collectors/: __init__.py  album.py  catalog.py  cli.py  http.py  lastfm.py  musicbrainz.py  spotify.py
src/rateyourdj/domain/: __init__.py  discovery.py  explanations.py  generators.py
src/rateyourdj/l1/: __init__.py  cli.py  models.py  service.py  store.py  tools.py
src/rateyourdj/l2/: __init__.py  cli.py  matching.py  merger.py  models.py  normalizers.py  service.py  store.py  tools.py
src/rateyourdj/l3/: __init__.py  cli.py  models.py  service.py  similarity.py  tools.py
src/rateyourdj/l4/: __init__.py  cli.py  models.py  scoring.py  service.py  tools.py
src/rateyourdj/l5/: __init__.py  cli.py  models.py  scoring.py  service.py  tools.py
src/rateyourdj/l6/: __init__.py  agent_tool_registry.py  agent_tool_schemas.py  cli.py  deepseek.py  errors.py  guards.py  loop_contract.py  model_runner.py  models.py  parser.py  provider.py  query_filters.py  ranking_runner.py  runtime.py  service.py  session_context.py  session_ranking.py  sessions.py  store.py  tool_guards.py  tool_registry.py  tools.py
src/rateyourdj/l7/: __init__.py  ab_compare.py  cli.py  eval_cases.py  eval_runner.py  models.py  service.py  synthetic.py  trajectory_quality.py
src/rateyourdj/providers/: __init__.py  factory.py  music.py
src/rateyourdj/training/: __init__.py  cli.py  dataset.py  grpo.py  sft.py
src/rateyourdj/web/: __init__.py  app.py
src/rateyourdj/web/static/: app.js  styles.css
src/rateyourdj/web/templates/: index.html
tests/: test_ab_compare.py  test_agent_tool_registry_v1.py  test_agent_tools.py  test_collectors.py  test_config.py  test_data_collection_smoke.py  test_deepseek.py  test_discovery.py  test_explanations.py  test_l1.py  test_l2.py  test_l3.py  test_l4.py  test_l5.py  test_l6.py  test_l7.py  test_music_providers.py  test_training.py  test_trajectory_quality.py  test_web.py
