[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rateyourdj"
version = "0.1.0"
description = "Personalized music recommendation agent"
requires-python = ">=3.10"

[project.scripts]
rateyourdj-l1 = "rateyourdj.l1.cli:main"
rateyourdj-l2 = "rateyourdj.l2.cli:main"
rateyourdj-l3 = "rateyourdj.l3.cli:main"
rateyourdj-collect = "rateyourdj.collectors.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
